--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,9 +6,11 @@
     <link rel="icon"
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     {% block stylesheets %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {% endblock %}
 
     {% block javascripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     {% endblock %}
     <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
     <link
@@ -22,7 +24,7 @@
         tailwind.config = {
             darkMode: "class",
             theme: {
-                fontFamily: {   
+                fontFamily: {
                     sans: ["Roboto", "sans-serif"],
                     body: ["Roboto", "sans-serif"],
                     mono: ["ui-monospace", "monospace"],
@@ -37,63 +39,32 @@
 <body class="bg-slate-50">
 <header class=""><!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
     <!-- Main navigation container -->
+    <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
     <nav
-            class="relative flex w-full flex-nowrap items-center justify-between bg-white py-2 text-neutral-500 shadow-lg hover:text-neutral-700 focus:text-neutral-700 dark:bg-neutral-600 lg:flex-wrap lg:justify-start lg:py-4"
-            data-te-navbar-ref>
-        <div class="flex w-full flex-wrap items-center justify-between px-3">
-            <!-- Hamburger button for mobile view -->
-            <button
-                    class="block border-0 bg-transparent px-2 text-neutral-500 hover:no-underline hover:shadow-none focus:no-underline focus:shadow-none focus:outline-none focus:ring-0 dark:text-neutral-200 lg:hidden"
-                    type="button"
-                    data-te-collapse-init
-                    data-te-target="#navbarSupportedContent8"
-                    aria-controls="navbarSupportedContent8"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <!-- Hamburger icon -->
-                <span class="[&>svg]:w-7">
-        <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="h-7 w-7">
-          <path
-                  fill-rule="evenodd"
-                  d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z"
-                  clip-rule="evenodd" />
-        </svg>
-      </span>
-            </button>
+            class="relative flex w-full flex-wrap items-center justify-between bg-neutral-900 py-2 text-neutral-500 shadow-lg hover:text-neutral-700 focus:text-neutral-700 lg:py-4">
+        <div class="ml-5 flex w-[30%] items-center justify-between" style="margin: auto;">
+            <input
+                    type="search"
+                    class="relative m-0 block w-[1px] min-w-0 flex-auto rounded border border-solid border-neutral-300 bg-transparent bg-white bg-clip-padding px-3 py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out focus:z-[3] focus:border-primary focus:text-neutral-700 focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] focus:outline-none motion-reduce:transition-none dark:border-neutral-600 dark:bg-neutral-600 dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:focus:border-primary"
+                    placeholder="Rechercher une todo"
+                    aria-label="Search"
+                    aria-describedby="button-addon2" />
 
-            <!-- Collapsible navbar container -->
-            <div
-                    class="!visible mt-2 hidden flex-grow basis-[100%] items-center justify-center lg:mt-0 lg:!flex lg:basis-auto"
-                    id="navbarSupportedContent8"
-                    data-te-collapse-item>
-                <!-- Left links -->
-                <ul
-                        class="list-style-none flex flex-col pl-0 lg:mt-1 lg:flex-row gap-5"
-                        data-te-navbar-nav-ref>
-                    <!-- Home link -->
-                    <li
-                            class="my-4 pl-2 lg:my-0 lg:pl-2 lg:pr-1 flex items-center"
-                            data-te-nav-item-ref>
-
-                        <a class="text-xl text-neutral-800 dark:text-neutral-200" href="#"
-                        >
-                            Mes TODOS
-                        </a>
-                    </li>
-                    <!-- Link -->
-                    <li
-                            class="mb-4 pl-2 lg:mb-0 lg:pl-0 lg:pr-1"
-                            data-te-nav-item-ref>
-                        <div class="w-[300px]  bg-gray-500 text-white inline-block p-2 rounded-md">
-                            Votre barre de recherche ici
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            <!--Search icon-->
+            <span
+                    class="input-group-text flex items-center whitespace-nowrap rounded px-3 py-1.5 text-center text-base font-normal text-white dark:text-neutral-200"
+                    id="basic-addon2">
+      <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+              class="h-5 w-5">
+        <path
+                fill-rule="evenodd"
+                d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
+                clip-rule="evenodd" />
+      </svg>
+    </span>
         </div>
     </nav>
 </header>
