--- a/templates/todo/index.html.twig
+++ b/templates/todo/index.html.twig
@@ -3,45 +3,64 @@
 {% block title %}Todo index{% endblock %}
 
 {% block body %}
-    <h1>Todo index</h1>
-    <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
-    <div class="flex flex-col">
-        <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
-            <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
-                <div class="overflow-hidden">
-                    <table class="min-w-full text-left text-sm font-light">
-                        <thead class="border-b font-medium dark:border-neutral-500">
-                        <tr>
-                            <th scope="col" class="px-6 py-4">Id</th>
-                            <th scope="col" class="px-6 py-4">Name</th>
-                            <th scope="col" class="px-6 py-4">Details</th>
-                            <th scope="col" class="px-6 py-4">Completed</th>
-                            <th scope="col" class="px-6 py-4">Actions</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for todo in todos %}
-                            <tr>
-                                <td class="whitespace-nowrap px-6 py-4">{{ todo.id }}</td>
-                                <td class="whitespace-nowrap px-6 py-4">{{ todo.name }}</td>
-                                <td class="whitespace-nowrap px-6 py-4">{{ todo.details }}</td>
-                                <td class="whitespace-nowrap px-6 py-4">{{ todo.completed ? 'Yes' : 'No' }}</td>
-                                <td class="whitespace-nowrap px-6 py-4">
-                                    <a href="{{ path('app_todo_show', {'id': todo.id}) }}">show</a>
-                                    <a href="{{ path('app_todo_edit', {'id': todo.id}) }}">edit</a>
-                                </td>
-                            </tr>
+
+    <a href="{{ path('app_todo_new') }}">
+        <button
+                type="button"
+                class="self-center mb-5 inline-block rounded border-2 border-neutral-800 px-6 pb-[6px] pt-2 text-xs font-medium uppercase leading-normal text-neutral-800 transition duration-150 ease-in-out hover:border-neutral-800 hover:bg-neutral-500 hover:bg-opacity-10 hover:text-neutral-800 focus:border-neutral-800 focus:text-neutral-800 focus:outline-none focus:ring-0 active:border-neutral-900 active:text-neutral-900 dark:border-neutral-900 dark:text-neutral-900 dark:hover:border-neutral-900 dark:hover:bg-neutral-100 dark:hover:bg-opacity-10 dark:hover:text-neutral-900 dark:focus:border-neutral-900 dark:focus:text-neutral-900 dark:active:border-neutral-900 dark:active:text-neutral-900"
+                data-te-ripple-init>
+            Créer une todo
+        </button>
+    </a>
+
+    <div class="flex flex-row flex-wrap gap-5">
+        {% for todo in todos %}
+            <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
+            <div
+                    class="block w-[18rem] rounded-lg bg-white text-left shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700">
+                <div class="p-6">
+                    <h5
+                            class="mb-1 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+                        {{ todo.name }}
+                    </h5>
+                    <h6
+                            class="mb-2 text-base font-medium leading-tight text-neutral-500 dark:text-neutral-50">
+                        Terminé ?
+                        {% if todo.completed == true %}
+                            <input type="checkbox" name="yes" checked disabled>
+                            <label for="yes">Yes</label>
+                            <input type="checkbox" name="no" disabled>
+                            <label for="no">No</label>
                         {% else %}
-                            <tr>
-                                <td colspan="5">no records found</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+                            <input type="checkbox" name="yes" disabled>
+                            <label for="yes">Yes</label>
+                            <input type="checkbox" name="no" checked disabled>
+                            <label for="no">No</label>
+                        {% endif %}
+                    </h6>
+                    <p
+                            class="mb-4 text-base  leading-normal text-neutral-600 dark:text-neutral-200">
+                        {{ todo.details }}
+                    </p>
+                    <a
+                            type="button"
+                            href="{{ path('app_todo_edit', {'id': todo.id}) }}"
+                            class="pointer-events-auto mr-5 inline-block cursor-pointer rounded text-base font-normal leading-normal text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 focus:outline-none focus:ring-0 active:text-primary-700">
+                        Modifier
+                    </a>
+                    <form method="post" action="{{ path('app_todo_delete', {'id': todo.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette todo?');">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ todo.id) }}">
+                        <button class="pointer-events-auto inline-block cursor-pointer rounded text-base font-normal leading-normal text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 focus:outline-none focus:ring-0 active:text-primary-700">Supprimer</button>
+                    </form>
+                    {#                <a#}
+                    {#                        type="button"#}
+                    {#                        href="#"#}
+                    {#                        class="pointer-events-auto inline-block cursor-pointer rounded text-base font-normal leading-normal text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 focus:outline-none focus:ring-0 active:text-primary-700">#}
+                    {#                    Supprimer#}
+                    {#                </a>#}
                 </div>
             </div>
-        </div>
-    </div>
+        {% endfor %}
 
-    <a href="{{ path('app_todo_new') }}">Create new</a>
+    </div>
 {% endblock %}
